--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -33,6 +33,11 @@ In this version 0.0.2 of this guide, you will learn:
 - Setup a full [Adafruit.io](https://io.adafruit.com/) https connection with a base64 decoder. (Note: CayenneLPP with Adafruit.io is easier to setup but less flexible)
 
 
+### Video Guides
+
+- [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12)
+
+
 For this example, you will need the following:
 Power users can jump ahead to the title Arduino Library #1 MKRWAN
 
@@ -843,6 +848,10 @@ void loop() {
 ```
 
 
+
+### Video Guides
+
+- [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12)
 
 
 
