--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -53,7 +53,7 @@ Despite the warnings above, some community members will decide to run their vali
 
 **What is the expected APR of running Helium validator?**
 
-It depends on the number of validators and how often a validator is randomly chosen to participate in the consensus group. Validators split the Consensus Group reward, [which is 6% of all HNT mined](/blockchain/mining/#hnt-distributions-per-epoch).
+It depends on the number of validators and how often a validator is randomly chosen to participate in the consensus group. Validators split the Consensus Group reward, [which is 6% of all HNT mined](/blockchain/mining/#hnt-distributions-per-epoch), plus the additional challenge creation rewards, as of May 11, 2022.
 
 The community has produced several models which should be instructive. Please do your own analysis before deciding to stake.
 
@@ -104,8 +104,8 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 
 :::
 
-| Provider                                                     | Non-custodial full node | Pooling     | Pricing                                                             | Notes
-| :----------------------------------------------------------- |:----------------------- |:----------- | :-------------------------------------------------------------------|:-----
+| Provider                                                     | Non-custodial full node | Pooling     | Pricing                                                             | Notes                | Discord Server
+| :----------------------------------------------------------- |:----------------------- |:----------- | :-------------------------------------------------------------------|:-------------------- |:-------------------------------
 | [Allnodes](https://www.allnodes.com)                         | Yes                     | No          | $80 per month (Basic) or $0.2380 per hour (Advanced)                |
 | [Argon.build](https://www.argon.build)                       | Yes                     | No          | 3% comission on earnings                                     |
 | [Bison Trails](https://www.bisontrails.co)                   | Yes                     | No          |                                                                     | Does not offer service to individuals who plan to run fewer than 10 nodes
@@ -114,6 +114,7 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [DLI](https://dlinodes.com)                                  | Yes                     | Yes         | All run in DLI Cloud, Staking, Nodes, 24/7 Support                  |
 | [Figment](https://figment.io/)                               | Yes                     | No          | 5% comission                                                        |
 | [Foundry Digital](https://foundrystaking.com/)               | Yes                     | No          | $150 per month                                                      | 
+| [GTel Networks](https://www.gtelnetworks.com/)               | Yes                     | No          | 6% Dedicated / 8% Shared or $249.00USD                                                     | High Performance, Low P/T Ratio, Sub 1s Validation Times, Incorporated 1999 | [GTel Discord](https://discord.gg/Gnn4RSSevs) |
 | [Helium Rising](https://www.heliumrising.com)                | Yes                     | Yes         | 5% comission                                                        |
 | [Helium Staking](https://www.helium-staking.com)             | Yes                     | Yes         | $150 per month for non-custodial full node. 4% of rewards for pool. |
 | [HNT Staking](https://www.hntstaking.net)                    | Yes                     | Yes         | $149 per monthly or $3 per day + 3% commission on earnings"         |
