--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -778,10 +778,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom HTTP Integration (Staging)
+### Create a Custom HTTP Integration
 
 ```
-POST https://staging-console.helium.wtf/api/v1/integrations
+POST https://console.helium.com/api/v1/integrations/
 ```
 
 Creates a custom HTTP integration. Use the Console UI for JSON message templates.
@@ -832,10 +832,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom MQTT Integration (Staging)
+### Create a Custom MQTT Integration
 
 ```
-POST https://staging-console.helium.wtf/api/v1/integrations
+POST https://console.helium.com/api/v1/integrations/
 ```
 
 Creates a custom MQTT integration. 
@@ -886,10 +886,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom Azure IoT Hub Integration (staging)
+### Create a Custom Azure IoT Hub Integration
 
 ```
-POST https://staging-console.helium.wtf/api/v1/integrations
+POST https://console.helium.com/api/v1/integrations/
 ```
 
 Creates a custom Azure IoT Hub integration. 
@@ -938,10 +938,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom AWS IoT Core Integration (staging)
+### Create a Custom AWS IoT Core Integration
 
 ```
-POST https://staging-console.helium.wtf/api/v1/integrations
+POST https://console.helium.com/api/v1/integrations/
 ```
 
 Creates a custom AWS IoT Core integration. 
