--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -941,7 +941,7 @@ _Body Parameters_
 ### Create a Custom AWS IoT Core Integration
 
 ```
-POST https://console.helium.com/api/v1/integrations/prebuilt
+POST https://console.helium.com/api/v1/integrations
 ```
 
 Creates a custom AWS IoT Core integration. 
