--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -8,16 +8,17 @@ slug: /use-the-network/console/hosting-providers
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-This space provides information about Console Hosting Providers available in the community. Note this is not an exhaustive list, and if you’d like to add your company feel free to make a pull request: https://github.com/helium/docs
+For demo and educational purposes the Helium Foundation Console is capped at 10 devices and a single Organization. Sign up [here](https://console.helium.com/).
+
+This section provides information about Console Hosting Providers available in the community. Note this is not an exhaustive list. If you’d like to add your company feel free to make a pull request: https://github.com/helium/docs
 
 :::info
-Links and information for these Console Hosting Providers is provided as is. 
+Links and information for these Console Hosting Providers is provided as is.
 :::
 
 The Helium Foundation is not directly associated with any of the following vendors and makes no endorsements about the quality of their offering. For more details including pricing, please reach out to the given provider.
 
 * Helium IoT Eur - A Console Hosting Provider based in the EU. More information [here](https://www.helium-iot.eu/use-helium-with-helium-iot-europe/).
 * Ubidots - Power your IoT and cloud applications with Ubidots. Sign up for beta [here](https://bit.ly/3JygTvn).
-* Foundation Console - For demo and educational purposes. Capped at 10 devices and a single Organization. Sign up [here](https://console.helium.com/).
-* Nova Console - contact sales@nova.xyz.
+* Nova Console - contact sales@nova-labs.com
 * BrDot Console - Brazil's Console Hosting Provider. For more information contact sales@brdot.co
