updated file to include lora-vision-shield

--- a/docs/use-the-network/devices/development/quickstart-guides.mdx
+++ b/docs/use-the-network/devices/development/quickstart-guides.mdx
@@ -31,3 +31,6 @@ The guides cover every step needed to program and send packets on the network.
 #### [RAK Wireless WisBlock Starter](/use-the-network/devices/development/rakwireless/wisblock-4631)
 - [Arduino](/use-the-network/devices/development/rakwireless/wisblock-4631/arduino)
 - [Platform IO](/use-the-network/devices/development/rakwireless/wisblock-4631/platformio)
+
+#### [LoRa Vision Shield with the Portenta](/use-the-network/devices/development/arduino/lora-vision-shield/)
+- [Arduino](/use-the-network/devices/development/arduino/lora-vision-shield/arduino)
