updated image for bootloader

--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -121,7 +121,8 @@ If you prefer to install the zipped latest file from the github click [MKRWAN](h
 
 
 
-### Arduino Library #2 "Portenta Pro Community Solutions"
+### Arduino Library #2 "Portenta Pro Community Solutions" 
+Optional as the sketch is provided below
 
 To communicate with Helium's LoRaWAN network, we'll need to install an Arduino
 library.
@@ -438,6 +439,12 @@ it with new firmware. To do this, first plug the device into your computer, make
 sure the board is getting power \(you should see a green LED on\). Next,
 quickly double-click the reset push button on the top side of the board, you
 should see the green LED slowly pulse about one green pulse per second, showing that you have successfully entered bootloader mode.
+
+<img
+  src={useBaseUrl(
+    "img/use-the-network/devices/development/arduino/lora-vision-shield/portenta-bootloader.jpg"
+  )}
+/>
 
 ### Selecting Port
 
