--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
@@ -38,7 +38,7 @@ for Always-on vision devices and applications.
 
 ### Video Guides
 
-- [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12)
+- [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12) The easier but less flexible MQTT Adafruit connection.
 
 ### Specifications
 
