--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -19,6 +19,8 @@ import TabItem from "@theme/TabItem";
 Before we begin, please make sure you've followed the steps from the Console
 quickstart [here](/use-the-network/console/quickstart).
 
+Note: Arduino or MBED experts can skip all the following beginner setup steps, Install the MKRWAN library, run ```MKRWANFWUpdate_standalone``` view the serial monitor to update the LoRa module and go directly to the step [portenta-lorawan-base64-encoded-sketch](#portenta-lorawan-base64-encoded-sketch).
+
 :::
 
 ## Objective and Requirements
