--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -455,7 +455,7 @@ void loop() {
 
 ### Compile Sketch and copy the Device EUI
 
-Once the above sketch is compiled and you have checked the port and loaded the Serial monitor you should see the Device EUI. Copy this value!
+Once the above sketch is compiled and you have checked the port and loaded the Serial monitor you should see your unique Device EUI. Copy this value!
 
 
 <img
@@ -468,7 +468,7 @@ Once the above sketch is compiled and you have checked the port and loaded the S
 
 ### Helium Console to Arduino Sketch
 
-After making a [Helium Console](https://console.helium.com) login, you we'll need select a new device "+" and on the Arduino sketch copy into the correct location   the SECRET_APP_EUI\(lsb\), and SECRET_APP_KEY\(msb\), written exactly as you see them on the Helium Console.
+After making a [Helium Console](https://console.helium.com) login, you we'll need to select a new device "+" and on the Arduino sketch copy into the correct location   the SECRET_APP_EUI called the "APP EUI", and the SECRET_APP_KEY which is called the "APP Key", written exactly as you see them on your Helium Console.
 
 ```
 #define SECRET_APP_EUI "00000000000000000" 
@@ -487,10 +487,14 @@ Note: If you are confused about the device EUI these Arduino boards have the dev
 />
 
 
+### Recompile your Arduino Sketch
 
+The Arduino sketch needs to be recompiled with the new App EUI and APP Key and the Portenta with VIsion SHield and LoRa Antenna need to be placed in an advantageous location to find Helium access points. You can power your device with any 5V USB battery pack. Best locations are near windows and the antenna placed vertically.
 
-Now let's head back to [Helium Console](https://console.helium.com) and look at
-our device page, Scroll down to the chart and click the black debug icon to see incoming data, you should see something similar to the screenshot below.
+### Check Your Helium Device
+
+Now let's head back to the [Helium Console](https://console.helium.com) and look at
+our device page, Scroll down to the chart and click the black debug icon to see incoming data, you should see something similar to the screenshot below. First the dvice needs to "joion" then it can "upload" data.
 
 <img
   src={useBaseUrl(
@@ -499,7 +503,7 @@ our device page, Scroll down to the chart and click the black debug icon to see 
 />
 
 Congratulations! You have just transmitted data on the Helium network! The next
-step is to learn how to use your device data to build applications, visit our
+step is to learn how to use your device data to build integrations to view your data, visit the Helium
 Integrations docs [here](/use-the-network/console/integrations).
 
 
@@ -508,7 +512,7 @@ Integrations docs [here](/use-the-network/console/integrations).
 There are a multitude of IOT sites to choose from, each with their own methods to setup. 
 You will be much more confident about those other sites once you have finished setting up a complete HTTPS connection with a decoder. 
 (I will show you the very inefficient base64 decoder simply because LoRaWan naturally base64 encodes your information)
-Note: See the end of this tutorial for an easier but less flexible CayenneLPP Adafruit MQTT example
+Note: See the end of this tutorial for an easier but less flexible  Adafruit CayenneLPP MQTT example.
 
 
 ### Setup Adafruit.io Feed and Webhook
