--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -5,7 +5,7 @@ sidebar_label: Helium Hotspot App
 slug: /wallets/app-wallet
 ---
 
-# Helium App Wallet Overview
+# Helium Hotspot App Overview
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
