Apply suggestions from code review
Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -29,7 +29,7 @@ be done via the [Maker Apps](/mine-hnt/maker-apps) available from the manufactur
   src={useBaseUrl("img/wallets/helium-wallet-app/import-account-banner.png")}
 />
 
-If you have an existing HNT wallet, either one created from the original Helium app
+If you have an existing Helium wallet, either one created from the original Helium app
 or using CLI, you can import it into the Wallet app.
 
 |  Account Type  | Action                                                                                |
@@ -45,13 +45,13 @@ or using CLI, you can import it into the Wallet app.
   src={useBaseUrl("img/wallets/helium-wallet-app/new-account-banner.png")}
 />
 
-Wallets created with the Helium Wallet app utilize a 24 word key. These 24 words in
+Wallets created with the Helium Wallet app are generated with a 24 word seed phrase. These 24 words in
 correct order are the only way to access the wallet, and can never be recovered if
-lost. They should never be shared, as whoever has them is considered the owner of
+lost. **They should never be shared**, as whoever has them is considered the owner of
 the HNT included. Anyone asking for them is guaranteed to be a scammer.
 
-Taking and storing screenshots of the seed words is not recommended, as it is not a
-secure way to store them.
+**Taking and storing screenshots of the seed words is not recommended, as it is not a**
+secure way to store them. Screenshots and photos stored or backed up in the cloud can easily be hacked and funds stolen.
 
 ### Ledger Wallet
 
@@ -89,7 +89,7 @@ You can also enter in the amount you are requesting, if it is a known quantity, 
 
 ### Multiple Recipient Payment Support
 
-Long available on the CLI wallet, multiple recipient payments are now supported on the
+Already available on the CLI wallet, multiple recipient payments are now supported on the
 Wallet app. This is most useful for those that need to wait for a payment transaction
 to clear and appear on the blockchain before sending the next payment.
 
@@ -98,7 +98,7 @@ to clear and appear on the blockchain before sending the next payment.
 You can create your own [QR codes](/wallets/app-wallet/deep-links-and-qr-codes/) to
 scan, which can include an address/alias to send payment to.
 
-Payments-v2 can have multiple payees which can also be included in a QR code.
+The new payment type supported in the Helium Wallet app can have multiple payees which can also be included in a QR code.
 
 If you form a transaction in a QR code you can scan it to send, which can also be done
 with burn transactions.
