copy edits for clarity

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -13,9 +13,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
   src={useBaseUrl("img/wallets/helium-wallet-app/header.png")}
 />
 
-While you can import wallets that contain Hotspots and Validators, the Helium Wallet
-App is not for Hotspot/Validator management. It is for interacting with the HNT
-wallet itself.
+The Helium Wallet app is the new trusted way to manage your tokens and identity on the
+Helium Blockchain. This new Wallet App is not meant to manage Hotspots or Validators.
 
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should
 be done via the [Maker Apps](/mine-hnt/maker-apps) available from the manufacturer.
@@ -100,8 +99,7 @@ scan, which can include an address/alias to send payment to.
 
 The new payment type supported in the Helium Wallet app can have multiple payees which can also be included in a QR code.
 
-If you form a transaction in a QR code you can scan it to send, which can also be done
-with burn transactions.
+You can also form a Burn transaction in QR Code format.
 
 :::
 
