helium wallet app initial documentation (#892)
* helium wallet app initial documentation

* missing comma

* Update docs/wallets/app-wallet/app-wallet.mdx

Co-authored-by: Coco Tang <coco@helium.com>

* Apply suggestions from code review

Co-authored-by: Coco Tang <coco@helium.com>

* copy edits for clarity

Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -1,13 +1,21 @@
 ---
 id: app-wallet
-title: Helium App Wallet
-sidebar_label: Helium App Wallet
+title: Helium Hotspot App
+sidebar_label: Helium Hotspot App
 slug: /wallets/app-wallet
 ---
 
-# Helium App Wallet Overview
+# Helium Hotspot App Overview
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
+
+:::important Sunset
+
+Wallet-related functionality in the Helium Hotspot app will be sunsetted over the
+coming months. This functionality is moving to the new
+[Helium Wallet App](/wallets/helium-wallet-app)
+
+:::
 
 The Helium app (available for
 [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
