--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -108,7 +108,11 @@ If nothing is returned from this command, your host system does not have AVX sup
 
 :::
 
-You have three options for deploying the Validator. The deb package, a community member maintained package by PaulVMo, is the least complex to deploy and has very high performance. The Source build has the highest level of complexity to deploy, requires a higher level of Linux technical expertise, and also has very high performance. The docker version is less complex to deploy than Source, if you already have experience with Docker, but does not perform as well as the other two options. You only need to do ONE of the following:
+You have three options for deploying the Validator. The deb package, a community member maintained package by PaulVMo, is the least complex to deploy and has very high performance. The Source build has the highest level of complexity to deploy, requires a higher level of Linux technical expertise, and also has very high performance. The docker version is less complex to deploy than Source, if you already have experience with Docker, but does not perform as well as the other two options. 
+
+See this [discord post](https://discord.com/channels/404106811252408320/857353417739730954/934259909434945536) on Helium discord for a performance comparison of the three different validator install methods.
+
+You only need to do ONE of the following:
 
 - [Deploy the Validator from deb package](https://github.com/PaulVMo/helium-validator-deb)
 - [Deploy the Validator Using Docker](#deploy-the-validator-using-docker)
